request form navigation no longer colpases on small

--- a/composersCouch/static/less/learn.less
+++ b/composersCouch/static/less/learn.less
@@ -18,8 +18,6 @@
   }
   .nav-tabs {
     li {
-      display: table-cell;
-      width: 1%;
       a {
         background-color: @dark-blue;
         border: none;
