--- a/composersCouch/staticfiles/less/overwrites/navs.less
+++ b/composersCouch/staticfiles/less/overwrites/navs.less
@@ -5,12 +5,18 @@
 // Tabs
 // -------------------------
 
-// Give the tabs something to sit on
 .nav-tabs {
   > li {
     > a {
-      background-color: #EBEBEB;
+      background-color: @silver-light;
       color:@gray;
     }
+  }
+}
+
+.nav-no-colapse {
+  li {
+    display: table-cell;
+    width: 1%;
   }
 }
